@@ -16,6 +16,8 @@ SVN version
 [FIX] rp_grant breaking when the console enters it
 [FIX] Stupid and retarded error in the player possessor :downs:
 [FIX] Atefood icon showing for everyone
+[FIX] Prop protection toggle not working
+[FIX] Normalsalary being stored twice.
 [CHANGE] /buypistol to /buy because of the custom items
 [CHANGE] Made admins.lua a bit more idiot proof
 [CHANGE] Cooks can now buy food too when hungermod is off
